# capstone-proj

./: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml
anchor/programs/vote/: Cargo.toml
anchor/src/: vote-exports.ts
anchor/tests/: vote.spec.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/contact/: route.ts
app/api/polls/: route.ts
app/components/: AppWalletProvider.tsx  CandidateList.tsx  Header.tsx  RegCandidate.tsx
app/components/common/: footer_card.tsx  navbar.tsx  search_results.tsx
app/components/context/: client_wallet_wrapper.tsx  wallet_provider.js  wallet_provider.tsx
app/components/dashboard/: dashboard_card.tsx  kyc_modal.tsx
app/components/faq/: faq.tsx  page.tsx  (+1 more)
app/contact-us/: page.tsx
app/dashboard/: page.tsx
app/faq/: page.js  page.tsx
app/getting-started/: page.tsx
app/home/: page.tsx
app/idl/: nft_id_contract.json  pda.ts  read_attributes.ts
app/lib/: client.ts  db.js  db.ts  db.tsx  useIsAdmin.ts
app/polls/: [id].tsx
app/post_login/: page.tsx
app/public_polls/: page.tsx
app/services/: blockchain.service.tsx
app/types/: poll.ts
app/utils/: interfaces.ts
blockchain_ware/nft_id_contract/: Anchor.toml  package-lock.json  package.json
blockchain_ware/nft_id_contract/programs/nft_id_contract/: Cargo.toml
blockchain_ware/nft_id_contract/programs/nft_id_contract/src/: lib.rs
src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
src/idl/: nft_id_contract.json
src/lib/: client.ts  useIsAdmin.ts
types/: nft_id_contract.ts
(+39 files in other folders)
